// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no Applications link 1`] = `
Array [
  Object {
    "x": 110,
    "y": 150,
  },
  Object {
    "path": "/Applications/TextEdit.app",
    "type": "link",
    "x": 410,
    "y": 440,
  },
]
`;

exports[`no background 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "NoBackground-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`no build directory 1`] = `undefined`;

exports[`unset dmg icon 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "Test ß No Volume Icon-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;
